infrastructure/subsystems/storage-core/garage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
spec:
  selector:
    app.kubernetes.io/name: garage
  ports:
  - name: s3-api
    port: 3900
    targetPort: s3-api
  - name: rpc
    port: 3901
    targetPort: rpc
  - name: web-api
    port: 3902
    targetPort: web-api
  - name: admin
    port: 3903
    targetPort: admin
